fix: dark mode navbar transparency

--- a/app/index.css
+++ b/app/index.css
@@ -2,100 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  #markdown {
-    line-height: 200%;
+@layer base {
+  [class="light"] body {
+    @apply bg-zinc-200 text-zinc-950;
 
-    #inline-code {
-      padding: 5px;
-      font-size: 14px;
-      border-radius: 5px;
-      font-weight: 700;
-    }
-
-    pre {
-      border-radius: 10px;
-      background-color: rgb(25, 25, 25) !important;
-
-      span {
-        background-color: rgb(25, 25, 25) !important;
+    #markdown {
+      #inline-code {
+        @apply bg-zinc-200;
       }
     }
   }
 
-  h2 {
-    font-size: larger;
-  }
+  [class="dark"] body {
+    @apply bg-zinc-900 text-zinc-200;
 
-  ol {
-    list-style-type: decimal-leading-zero;
-    list-style-position: inside;
+    #markdown {
+      #inline-code {
+        @apply bg-zinc-800;
+      }
+    }
   }
-
-  ul {
-    list-style-type: square;
-    list-style-position: inside;
-  }
-
-  a {
-    color: #2386ff;
-  }
-
-  a:hover {
-    color: #7ca8ef;
-    text-decoration: underline;
-  }
-
-  .regex-delimiter,
-  .regex-source {
-    background-color: rgba(0, 0, 0, 0) !important;
-  }
-}
-
-[class="light"] body {
-  color: black;
-  background: rgb(229, 229, 232);
 
   #markdown {
-    #inline-code {
-      background-color: rgb(220, 220, 232);
-      box-shadow: 0px 2px rgba(25, 25, 25, 0.25);
-    }
+    @apply leading-[250%];
 
     h2 {
-      color: black;
+      @apply text-xl;
     }
 
-    p {
-      color: rgb(80, 80, 80);
+    a {
+      @apply text-blue-600 hover:underline dark:text-blue-400;
     }
 
-    li {
-      color: rgb(80, 80, 80);
+    ol,
+    ul {
+      @apply list-inside;
     }
-  }
-}
 
-[class="dark"] body {
-  color: white;
-  background: rgb(28, 28, 30);
+    ol {
+      @apply list-decimal;
+    }
 
-  #markdown {
+    ul {
+      @apply list-disc;
+    }
+
+    pre {
+      @apply rounded !bg-zinc-900 dark:!bg-zinc-950;
+
+      span {
+        @apply !bg-zinc-900 dark:!bg-zinc-950;
+      }
+    }
+
     #inline-code {
-      background-color: rgb(40, 40, 40);
-      box-shadow: 0px 2px rgba(225, 225, 225, 0.15);
-    }
-
-    h2 {
-      color: white;
-    }
-
-    p {
-      color: rgb(215, 215, 215);
-    }
-
-    li {
-      color: rgb(215, 215, 215);
+      @apply rounded !bg-zinc-300 p-1 text-sm dark:!bg-zinc-800;
     }
   }
 }
